http://bugzilla.zimbra.com/show_bug.cgi?id=11986 bug 11986 align fields in new account wiz

--- a/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
+++ b/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
@@ -597,3 +597,7 @@ P, TD, DIV, SPAN, SELECT, INPUT, TEXTAREA, BUTTON {
 .ZaOverride {
 	background-color:#FFF6BF;
 }
+
+.ZaWizLabel {
+	width:200px;
+}
